# Expense-Tracker-API-Flask

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  config.py  exceptions.py
src/database/: create_db_tables.py  db_connection.py  init_db.py  schema.sql
src/repositories/: transactions_repo.py  users_repo.py
src/routes/: auth_routes.py  transactions_routes.py  users_routes.py
src/schemas/: auth_user_schemas.py  jwt_schemas.py  transaction_schemas.py
src/services/: auth_service.py  transactions_service.py  users_service.py
src/utils/: jwt_utils.py  password.py
tests/: conftest.py  factories.py
tests/auth/: test_login.py  test_register.py
tests/transactions/: test_tx_create.py  test_tx_delete.py  test_tx_info.py  test_tx_list.py  test_tx_update.py
tests/users/: test_user_delete.py  test_user_info.py  test_user_update.py
tests/utils/: test_pasword.py  test_request.py  test_token.py
